--- a/004 Оптимизация/Практика оптимизации/Карта.md
+++ b/004 Оптимизация/Практика оптимизации/Карта.md
@@ -1,22 +1,22 @@
-# Чек-лист настройки и оптимизации
-## Аппаратная часть
+# Чек-лист
+## [Аппаратная часть]()
 [CPU, память, дисковые подсистемы, сеть ]()  
 [HT, NUMA]()  
 [ВМ/докер/кубер]()  
-## Настройка ОС 
+## [Настройка ОС]()
 [swapiness]()  
 [vm.dirty_*ratio]()  
 [vm.overcommit_memory vm.overcommit_ratio]()  
 [vm.nr_overcommit_hugepages]()  
 [Huge pages]()  
 [Transparent Huge Pages]()  
-## Организация физического хранения данных
+## [Организация физического хранения данных]()
 [имеет смысл монтировать ТП в память для индексов, материализованных представлений]()  
 [вместо RAID для NVMe – просто отказоустойчивую реплику]()  
 [noatime, nobarier]()  
 [fsync]()  
 [размер pg_class]()  
-## Настройка PostgreSQL
+## [Настройка PostgreSQL]()
 [shared_buffers]()  
 [max_connections]()  
 [effective_cache_size]()  
@@ -32,7 +32,7 @@
 [max_worker_processes / max_parallel_workers_per_gather]()  
 [max_parallel_maintenance_workers/ max_parallel_workers]()  
 [old_snapshot_threshold = -1]()  
-## High Load
+## [High Load]()
 [выбрать архитектуру решения]()  
 [если много коннектов – рассмотреть варианты пулинга]()  
 [архитектура и балансировка нагрузки]()  
@@ -47,7 +47,7 @@
 [используется ли секционирование – максимальный размер 32]()  
 [ТБ, принцип скользящего окна (log – 12 месяцев, log_archive]()  
 [проверка нагрузочным тестированием]()  
-## Резервное копирование и репликация
+## [Резервное копирование и репликация]()
 [бэкап со слейва]()  
 [проверка бэкапа на восстановление (вариант подсчёта количества записей на момент бэкапа и восстановления)]()  
 [снепшот не бэкап]()  
@@ -58,7 +58,7 @@
 [какой уровень из 5 выбран для синхронного коммита]()  
 [на каком уровне применяем транзакция, сессия, БД, юзер]()  
 [нужен ли нам PITR]()  
-## Мониторинг и оповещение
+## [Мониторинг и оповещение]()
 [обязательно минимум prometheus (victoria) + grafana]()  
 [минимально рекомендую мониторить: CPU, память, диски, сеть,]()  
 [лаг репликации, свободное место, размеры WAL-файлов,]()  
@@ -66,7 +66,7 @@
 [постоянно ли работают все автовакуум-воркеры]()  
 [остальное описано в 5 теме]()  
 [обязательно настроить алертинг!]()  
-## Настройка журнала
+## [Настройка журнала]()
 [уровень синхронности]()  
 [уровень сжатия]()  
 [количество слотов репликации]()  
@@ -77,16 +77,16 @@
 [рассмотреть возможность выноса на отдельный диск]()  
 [сетевые задержки – желательно вообще протестировать точку монтирования]()  
 [тюним контрольную точку/bgwriter в зависимости от задач314]()  
-## Обслуживание (Vacuum etc)
+## [Обслуживание (Vacuum etc)]()
 [поагрессивнее2]()  
 [помним про Transaction ID wraparound]()  
 [мониторим возраст таблиц]()  
 [помним про выделение work_mem]()  
 [собираем и актуализируем статистику]()  
-## Управление блокировками
+## [Управление блокировками]()
 [отслеживаем deadlock]()  
 [мониторим общее количество блокировок]()  
-## Оптимизация схемы данных
+## [Оптимизация схемы данных]()
 [внешний ключ на текстовое поле]()  
 [используем индексы исходя из запросов]()  
 [убираем неиспользуемые индексы]()  
@@ -97,11 +97,11 @@
 [DEFAULT, особенно если используем тяжёлую функцию]()  
 [вирт.колонка]()  
 [триггеры]()  
-## Оптимизируем запросов
+## [Оптимизируем запросов]()
 [проверяем seqscan]()  
 [статистику]()  
 [autoexplain]()  
-## Регулярное обслуживание
+## [Регулярное обслуживание]()
 [прогноз роста БД и свободного места]()  
 [топ таблиц с динамикой роста (помним по 32 ТБ)]()  
 [блоат индексов/тостов/данных]()  
