--- a/004 Оптимизация/Практика оптимизации/Карта.md
+++ b/004 Оптимизация/Практика оптимизации/Карта.md
@@ -1,22 +1,48 @@
 # Чек-лист
-## [Аппаратная часть]()
+
+## 1. Настройка ВМ, ОС и СУБД
+### [Аппаратная часть]()
 [CPU, память, дисковые подсистемы, сеть ]()  
 [HT, NUMA]()  
 [ВМ/докер/кубер]()  
-## [Настройка ОС]()
+### [Настройка ОС]()
 [swapiness]()  
 [vm.dirty_*ratio]()  
 [vm.overcommit_memory vm.overcommit_ratio]()  
 [vm.nr_overcommit_hugepages]()  
 [Huge pages]()  
 [Transparent Huge Pages]()  
-## [Организация физического хранения данных]()
+## 3. Подключение к PostgreSQL. Права пользователя
+## 4. Настройка файловой системы
+### [Организация физического хранения данных]()
 [имеет смысл монтировать ТП в память для индексов, материализованных представлений]()  
 [вместо RAID для NVMe – просто отказоустойчивую реплику]()  
 [noatime, nobarier]()  
 [fsync]()  
 [размер pg_class]()  
-## [Настройка PostgreSQL]()
+## 6. Настройка бэкапов и репликации
+### [Резервное копирование и репликация]()
+[бэкап со слейва]()  
+[проверка бэкапа на восстановление (вариант подсчёта количества записей на момент бэкапа и восстановления)]()  
+[снепшот не бэкап]()  
+[вариант использования Data Domain]()  
+[что с расписанием бэкапов и какой метод]()  
+[не забываем удалять старые бэкапы – retension policy]()  
+[предусмотрен ли DR]()  
+[какой уровень из 5 выбран для синхронного коммита]()  
+[на каком уровне применяем транзакция, сессия, БД, юзер]()  
+[нужен ли нам PITR]()  
+## 7. Мониторинг, профилирование и логирование
+### [Мониторинг и оповещение]()
+[обязательно минимум prometheus (victoria) + grafana]()  
+[минимально рекомендую мониторить: CPU, память, диски, сеть,]()  
+[лаг репликации, свободное место, размеры WAL-файлов,]()  
+[возраст записей/таблиц для аварийной заморозки, количество сессий, TPS, долгие запросы, temp_files, deadlock]()  
+[постоянно ли работают все автовакуум-воркеры]()  
+[остальное описано в 5 теме]()  
+[обязательно настроить алертинг!]()  
+## 8. Тюнинг shared_buffers, background writer, checkpoint, WAL
+### [Настройка PostgreSQL]()
 [shared_buffers]()  
 [max_connections]()  
 [effective_cache_size]()  
@@ -32,7 +58,41 @@
 [max_worker_processes / max_parallel_workers_per_gather]()  
 [max_parallel_maintenance_workers/ max_parallel_workers]()  
 [old_snapshot_threshold = -1]()  
-## [High Load]()
+### [Настройка журнала]()
+[уровень синхронности]()  
+[уровень сжатия]()  
+[количество слотов репликации]()  
+[уровень журнала]()  
+[объём генерации за чекпойнт]()  
+[может, есть смысл увеличить размер WAL-файлов]()  
+[отключить init_zero]()  
+[рассмотреть возможность выноса на отдельный диск]()  
+[сетевые задержки – желательно вообще протестировать точку монтирования]()  
+[тюним контрольную точку/bgwriter в зависимости от задач314]()  
+## 9. Особенности работы Vacuum, work_mem, statistic collector, locks
+### [Обслуживание (Vacuum etc)]()
+[поагрессивнее2]()  
+[помним про Transaction ID wraparound]()  
+[мониторим возраст таблиц]()  
+[помним про выделение work_mem]()  
+[собираем и актуализируем статистику]()  
+### [Управление блокировками]()
+[отслеживаем deadlock]()  
+[мониторим общее количество блокировок]()  
+## 10. Оптимизация схемы данных
+### [Оптимизация схемы данных]()
+[внешний ключ на текстовое поле]()  
+[используем индексы исходя из запросов]()  
+[убираем неиспользуемые индексы]()  
+[добавляем новые по потребности]()  
+[используем индексы на внешние ключи исходя из анализа запросов]()  
+[не забываем обслуживать индексы]()  
+[проверяем типы полей]()  
+[DEFAULT, особенно если используем тяжёлую функцию]()  
+[вирт.колонка]()  
+[триггеры]()  
+## 12. Оптимизация запросов
+### [High Load]()
 [выбрать архитектуру решения]()  
 [если много коннектов – рассмотреть варианты пулинга]()  
 [архитектура и балансировка нагрузки]()  
@@ -47,61 +107,12 @@
 [используется ли секционирование – максимальный размер 32]()  
 [ТБ, принцип скользящего окна (log – 12 месяцев, log_archive]()  
 [проверка нагрузочным тестированием]()  
-## [Резервное копирование и репликация]()
-[бэкап со слейва]()  
-[проверка бэкапа на восстановление (вариант подсчёта количества записей на момент бэкапа и восстановления)]()  
-[снепшот не бэкап]()  
-[вариант использования Data Domain]()  
-[что с расписанием бэкапов и какой метод]()  
-[не забываем удалять старые бэкапы – retension policy]()  
-[предусмотрен ли DR]()  
-[какой уровень из 5 выбран для синхронного коммита]()  
-[на каком уровне применяем транзакция, сессия, БД, юзер]()  
-[нужен ли нам PITR]()  
-## [Мониторинг и оповещение]()
-[обязательно минимум prometheus (victoria) + grafana]()  
-[минимально рекомендую мониторить: CPU, память, диски, сеть,]()  
-[лаг репликации, свободное место, размеры WAL-файлов,]()  
-[возраст записей/таблиц для аварийной заморозки, количество сессий, TPS, долгие запросы, temp_files, deadlock]()  
-[постоянно ли работают все автовакуум-воркеры]()  
-[остальное описано в 5 теме]()  
-[обязательно настроить алертинг!]()  
-## [Настройка журнала]()
-[уровень синхронности]()  
-[уровень сжатия]()  
-[количество слотов репликации]()  
-[уровень журнала]()  
-[объём генерации за чекпойнт]()  
-[может, есть смысл увеличить размер WAL-файлов]()  
-[отключить init_zero]()  
-[рассмотреть возможность выноса на отдельный диск]()  
-[сетевые задержки – желательно вообще протестировать точку монтирования]()  
-[тюним контрольную точку/bgwriter в зависимости от задач314]()  
-## [Обслуживание (Vacuum etc)]()
-[поагрессивнее2]()  
-[помним про Transaction ID wraparound]()  
-[мониторим возраст таблиц]()  
-[помним про выделение work_mem]()  
-[собираем и актуализируем статистику]()  
-## [Управление блокировками]()
-[отслеживаем deadlock]()  
-[мониторим общее количество блокировок]()  
-## [Оптимизация схемы данных]()
-[внешний ключ на текстовое поле]()  
-[используем индексы исходя из запросов]()  
-[убираем неиспользуемые индексы]()  
-[добавляем новые по потребности]()  
-[используем индексы на внешние ключи исходя из анализа запросов]()  
-[не забываем обслуживать индексы]()  
-[проверяем типы полей]()  
-[DEFAULT, особенно если используем тяжёлую функцию]()  
-[вирт.колонка]()  
-[триггеры]()  
-## [Оптимизируем запросов]()
+### [Оптимизируем запросов]()
 [проверяем seqscan]()  
 [статистику]()  
 [autoexplain]()  
-## [Регулярное обслуживание]()
+## 13. Обслуживание СУБД
+### [Регулярное обслуживание]()
 [прогноз роста БД и свободного места]()  
 [топ таблиц с динамикой роста (помним по 32 ТБ)]()  
 [блоат индексов/тостов/данных]()  
