--- a/004 Оптимизация/Практика оптимизации/Карта.md
+++ b/004 Оптимизация/Практика оптимизации/Карта.md
@@ -5,6 +5,7 @@
 [CPU, память, дисковые подсистемы, сеть ]()  
 [HT, NUMA]()  
 [ВМ/докер/кубер]()  
+[Конфигурация сервера]()  
 ### [Настройка ОС]()
 [swapiness]()  
 [vm.dirty_*ratio]()  
