--- a/004 Оптимизация/Практика оптимизации/Аппаратная часть/Память.md
+++ b/004 Оптимизация/Практика оптимизации/Аппаратная часть/Память.md
@@ -1,1 +1,5 @@
-
+## Устройство буферного кеша
+[3] 178
+Буферный кеш располагается в общей памяти сервера и доступен всем процессам.   
+Кеш называется буферным, потому что представляет собой массив буферов.   
+Каждый буфер резервирует фрагмент памяти, достаточный для одной страницы данных и ее заголовка
