--- a/004 Оптимизация/Практика оптимизации/Аппаратная часть/Память.md
+++ b/004 Оптимизация/Практика оптимизации/Аппаратная часть/Память.md
@@ -1,5 +1,3 @@
 ## Устройство буферного кеша
 [3] 178
-Буферный кеш располагается в общей памяти сервера и доступен всем процессам.   
-Кеш называется буферным, потому что представляет собой массив буферов.   
-Каждый буфер резервирует фрагмент памяти, достаточный для одной страницы данных и ее заголовка
+[Посмотреть грязные/чистые буфера объекта бд](https://github.com/AV-ghub/PostgreSQL/blob/main/004%20%D0%9E%D0%BF%D1%82%D0%B8%D0%BC%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0%20%D0%BE%D0%BF%D1%82%D0%B8%D0%BC%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D0%B8/%D0%A1%D0%BA%D1%80%D0%B8%D0%BF%D1%82%D1%8B/%D0%91%D1%83%D1%84%D0%B5%D1%80%D0%BD%D1%8B%D0%B9%20%D0%BA%D1%8D%D1%88/buffercache.sql)
