Update Формула расчета основных конфигурационных параметров памяти.md

--- a/004 Оптимизация/Практика оптимизации/Сценарии/Частные/Формула расчета основных конфигурационных параметров памяти.md
+++ b/004 Оптимизация/Практика оптимизации/Сценарии/Частные/Формула расчета основных конфигурационных параметров памяти.md
@@ -1,1 +1,7 @@
-
+```
+ОЗУ >
+2Gb +
+shared_buffers +
+max_connections * (work_mem + temp_buffers) +
+maintance_parallel_workers * maintance_work_mem
+```
