--- a/004 Оптимизация/Практика оптимизации/Сценарии/Общие/Память.md
+++ b/004 Оптимизация/Практика оптимизации/Сценарии/Общие/Память.md
@@ -1,1 +1,6 @@
+## Конфигурация
+Конфигурируем [swapiness](https://github.com/AV-ghub/PostgreSQL/blob/main/004%20%D0%9E%D0%BF%D1%82%D0%B8%D0%BC%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0%20%D0%BE%D0%BF%D1%82%D0%B8%D0%BC%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D0%B8/%D0%A1%D1%86%D0%B5%D0%BD%D0%B0%D1%80%D0%B8%D0%B8/%D0%A7%D0%B0%D1%81%D1%82%D0%BD%D1%8B%D0%B5/Swap.md#swappiness)    
+Совсем в 0 не ставим, исходя из техники безопасности, оптимально 1-5-10. На небольших объемах памяти лучше занижать. На SSD дисках также лучше ставить меньше.
+Но запас на ООМ killer должен быть.   
+
 
