--- a/004 Оптимизация/Практика оптимизации/Сценарии/Общие/Диск.md
+++ b/004 Оптимизация/Практика оптимизации/Сценарии/Общие/Диск.md
@@ -1,2 +1,3 @@
-## Группа настроек vm.dirty_*ratio
+## Настройка дисковой подсистемы
+[Группа настроек vm.dirty_*ratio]()
 Отвечает за порядок записи на диск.   
