--- a/004 Оптимизация/Практика оптимизации/Карта.md
+++ b/004 Оптимизация/Практика оптимизации/Карта.md
@@ -1,123 +1,124 @@
 # Чек-лист
 
-## 1. Настройка ВМ, ОС и СУБД
-### [Аппаратная часть]()
-[CPU, память, дисковые подсистемы, сеть ]()  
-[HT, NUMA]()  
-[ВМ/докер/кубер]()  
-[Конфигурация сервера]()  
-### [Настройка ОС]()
-[swapiness]()  
-[vm.dirty_*ratio]()  
-[vm.overcommit_memory vm.overcommit_ratio]()  
-[vm.nr_overcommit_hugepages]()  
-[Huge pages]()  
-[Transparent Huge Pages]()  
+## 1. Аппаратная часть, ОС и СУБД
+### [Аппаратная часть](https://github.com/AV-ghub/PostgreSQL/tree/main/004%20%D0%9E%D0%BF%D1%82%D0%B8%D0%BC%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0%20%D0%BE%D0%BF%D1%82%D0%B8%D0%BC%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D0%B8/%D0%90%D0%BF%D0%BF%D0%B0%D1%80%D0%B0%D1%82%D0%BD%D0%B0%D1%8F%20%D1%87%D0%B0%D1%81%D1%82%D1%8C)
+[--CPU, память, дисковые подсистемы, сеть]()  
+[--HT, NUMA]()  
+[--ВМ/докер/кубер]()  
+[--Конфигурация сервера]()  
+### [--ОС]()
+[swapiness](https://github.com/AV-ghub/PostgreSQL/blob/main/004%20%D0%9E%D0%BF%D1%82%D0%B8%D0%BC%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0%20%D0%BE%D0%BF%D1%82%D0%B8%D0%BC%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D0%B8/%D0%A1%D1%86%D0%B5%D0%BD%D0%B0%D1%80%D0%B8%D0%B8/%D0%A7%D0%B0%D1%81%D1%82%D0%BD%D1%8B%D0%B5/Swap.md)  
+[vm.dirty_*ratio](https://github.com/AV-ghub/PostgreSQL/blob/main/004%20%D0%9E%D0%BF%D1%82%D0%B8%D0%BC%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0%20%D0%BE%D0%BF%D1%82%D0%B8%D0%BC%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D0%B8/%D0%A1%D1%86%D0%B5%D0%BD%D0%B0%D1%80%D0%B8%D0%B8/%D0%A7%D0%B0%D1%81%D1%82%D0%BD%D1%8B%D0%B5/%D0%93%D1%80%D1%83%D0%BF%D0%BF%D0%B0%20%D0%BD%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B5%D0%BA%20vm.dirty_*ratio.md)  
+[vm.overcommit_memory vm.overcommit_ratio](https://github.com/AV-ghub/PostgreSQL/blob/main/004%20%D0%9E%D0%BF%D1%82%D0%B8%D0%BC%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0%20%D0%BE%D0%BF%D1%82%D0%B8%D0%BC%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D0%B8/%D0%A1%D1%86%D0%B5%D0%BD%D0%B0%D1%80%D0%B8%D0%B8/%D0%A7%D0%B0%D1%81%D1%82%D0%BD%D1%8B%D0%B5/OOM%20killer.md)  
+[--vm.nr_overcommit_hugepages]()  
+[--Huge pages]()  
+[--Transparent Huge Pages]()  
+### [--PostgreSQL]()  
 ## 3. Подключение к PostgreSQL. Права пользователя
 ## 4. Настройка файловой системы
-### [Организация физического хранения данных]()
-[имеет смысл монтировать ТП в память для индексов, материализованных представлений]()  
-[вместо RAID для NVMe – просто отказоустойчивую реплику]()  
-[noatime, nobarier]()  
-[fsync]()  
-[размер pg_class]()  
+### [--Организация физического хранения данных]()
+[--имеет смысл монтировать ТП в память для индексов, материализованных представлений]()  
+[--вместо RAID для NVMe – просто отказоустойчивую реплику]()  
+[--noatime, nobarier]()  
+[--fsync]()  
+[--размер pg_class]()  
 ## 6. Настройка бэкапов и репликации
-### [Резервное копирование и репликация]()
-[бэкап со слейва]()  
-[проверка бэкапа на восстановление (вариант подсчёта количества записей на момент бэкапа и восстановления)]()  
-[снепшот не бэкап]()  
-[вариант использования Data Domain]()  
-[что с расписанием бэкапов и какой метод]()  
-[не забываем удалять старые бэкапы – retension policy]()  
-[предусмотрен ли DR]()  
-[какой уровень из 5 выбран для синхронного коммита]()  
-[на каком уровне применяем транзакция, сессия, БД, юзер]()  
-[нужен ли нам PITR]()  
+### [--Резервное копирование и репликация]()
+[--бэкап со слейва]()  
+[--проверка бэкапа на восстановление (вариант подсчёта количества записей на момент бэкапа и восстановления)]()  
+[--снепшот не бэкап]()  
+[--вариант использования Data Domain]()  
+[--что с расписанием бэкапов и какой метод]()  
+[--не забываем удалять старые бэкапы – retension policy]()  
+[--предусмотрен ли DR]()  
+[--какой уровень из 5 выбран для синхронного коммита]()  
+[--на каком уровне применяем транзакция, сессия, БД, юзер]()  
+[--нужен ли нам PITR]()  
 ## 7. Мониторинг, профилирование и логирование
-### [Мониторинг и оповещение]()
-[обязательно минимум prometheus (victoria) + grafana]()  
-[минимально рекомендую мониторить: CPU, память, диски, сеть,]()  
-[лаг репликации, свободное место, размеры WAL-файлов,]()  
-[возраст записей/таблиц для аварийной заморозки, количество сессий, TPS, долгие запросы, temp_files, deadlock]()  
-[постоянно ли работают все автовакуум-воркеры]()  
-[остальное описано в 5 теме]()  
-[обязательно настроить алертинг!]()  
+### [--Мониторинг и оповещение]()
+[--обязательно минимум prometheus (victoria) + grafana]()  
+[--минимально рекомендую мониторить: CPU, память, диски, сеть,]()  
+[--лаг репликации, свободное место, размеры WAL-файлов,]()  
+[--возраст записей/таблиц для аварийной заморозки, количество сессий, TPS, долгие запросы, temp_files, deadlock]()  
+[--постоянно ли работают все автовакуум-воркеры]()  
+[--остальное описано в 5 теме]()  
+[--обязательно настроить алертинг!]()  
 ## 8. Тюнинг shared_buffers, background writer, checkpoint, WAL
-### [Настройка PostgreSQL]()
-[shared_buffers]()  
-[max_connections]()  
-[effective_cache_size]()  
-[work_mem]()  
-[maintenance_work_mem]()  
-[wal_buffers]()  
-[min_wal_size / max_wal_size]()  
-[wal_segment_size]()  
-[checkpoint_timeout]()  
-[synchronous_commit]()  
-[random_page_cost]()  
-[effective_io_concurrency]()  
-[max_worker_processes / max_parallel_workers_per_gather]()  
-[max_parallel_maintenance_workers/ max_parallel_workers]()  
-[old_snapshot_threshold = -1]()  
-### [Настройка журнала]()
-[уровень синхронности]()  
-[уровень сжатия]()  
-[количество слотов репликации]()  
-[уровень журнала]()  
-[объём генерации за чекпойнт]()  
-[может, есть смысл увеличить размер WAL-файлов]()  
-[отключить init_zero]()  
-[рассмотреть возможность выноса на отдельный диск]()  
-[сетевые задержки – желательно вообще протестировать точку монтирования]()  
-[тюним контрольную точку/bgwriter в зависимости от задач314]()  
+### [--Настройка PostgreSQL]()
+[--shared_buffers]()  
+[--max_connections]()  
+[--effective_cache_size]()  
+[--work_mem]()  
+[--maintenance_work_mem]()  
+[--wal_buffers]()  
+[--min_wal_size / max_wal_size]()  
+[--wal_segment_size]()  
+[--checkpoint_timeout]()  
+[--synchronous_commit]()  
+[--random_page_cost]()  
+[--effective_io_concurrency]()  
+[--max_worker_processes / max_parallel_workers_per_gather]()  
+[--max_parallel_maintenance_workers/ max_parallel_workers]()  
+[--old_snapshot_threshold = -1]()  
+### [--Настройка журнала]()
+[--уровень синхронности]()  
+[--уровень сжатия]()  
+[--количество слотов репликации]()  
+[--уровень журнала]()  
+[--объём генерации за чекпойнт]()  
+[--может, есть смысл увеличить размер WAL-файлов]()  
+[--отключить init_zero]()  
+[--рассмотреть возможность выноса на отдельный диск]()  
+[--сетевые задержки – желательно вообще протестировать точку монтирования]()  
+[--тюним контрольную точку/bgwriter в зависимости от задач314]()  
 ## 9. Особенности работы Vacuum, work_mem, statistic collector, locks
-### [Обслуживание (Vacuum etc)]()
-[поагрессивнее2]()  
-[помним про Transaction ID wraparound]()  
-[мониторим возраст таблиц]()  
-[помним про выделение work_mem]()  
-[собираем и актуализируем статистику]()  
-### [Управление блокировками]()
-[отслеживаем deadlock]()  
-[мониторим общее количество блокировок]()  
+### [--Обслуживание (Vacuum etc)]()
+[--поагрессивнее2]()  
+[--помним про Transaction ID wraparound]()  
+[--мониторим возраст таблиц]()  
+[--помним про выделение work_mem]()  
+[--собираем и актуализируем статистику]()  
+### [--Управление блокировками]()
+[--отслеживаем deadlock]()  
+[--мониторим общее количество блокировок]()  
 ## 10. Оптимизация схемы данных
-### [Оптимизация схемы данных]()
-[внешний ключ на текстовое поле]()  
-[используем индексы исходя из запросов]()  
-[убираем неиспользуемые индексы]()  
-[добавляем новые по потребности]()  
-[используем индексы на внешние ключи исходя из анализа запросов]()  
-[не забываем обслуживать индексы]()  
-[проверяем типы полей]()  
-[DEFAULT, особенно если используем тяжёлую функцию]()  
-[вирт.колонка]()  
-[триггеры]()  
+### [--Оптимизация схемы данных]()
+[--внешний ключ на текстовое поле]()  
+[--используем индексы исходя из запросов]()  
+[--убираем неиспользуемые индексы]()  
+[--добавляем новые по потребности]()  
+[--используем индексы на внешние ключи исходя из анализа запросов]()  
+[--не забываем обслуживать индексы]()  
+[--проверяем типы полей]()  
+[--DEFAULT, особенно если используем тяжёлую функцию]()  
+[--вирт.колонка]()  
+[--триггеры]()  
 ## 12. Оптимизация запросов
-### [High Load]()
-[выбрать архитектуру решения]()  
-[если много коннектов – рассмотреть варианты пулинга]()  
-[архитектура и балансировка нагрузки]()  
-[настройка фейловера/фейлбеком]()  
-[проверить, включен ли pg_rewind]()  
-[выбрать ролевую модель]()  
-[выбрать модель использований хранимых процедур и функций313]()  
-[согласовать необходимость использования триггеров]()  
-[использовать pg_anon или аналог для работы на дев-стендах]()  
-[разные ТП под таблицы, валы, логи]()  
-[что с batch insert/update]()  
-[используется ли секционирование – максимальный размер 32]()  
-[ТБ, принцип скользящего окна (log – 12 месяцев, log_archive]()  
-[проверка нагрузочным тестированием]()  
-### [Оптимизируем запросов]()
-[проверяем seqscan]()  
-[статистику]()  
-[autoexplain]()  
+### [--High Load]()
+[--выбрать архитектуру решения]()  
+[--если много коннектов – рассмотреть варианты пулинга]()  
+[--архитектура и балансировка нагрузки]()  
+[--настройка фейловера/фейлбеком]()  
+[--проверить, включен ли pg_rewind]()  
+[--выбрать ролевую модель]()  
+[--выбрать модель использований хранимых процедур и функций313]()  
+[--согласовать необходимость использования триггеров]()  
+[--использовать pg_anon или аналог для работы на дев-стендах]()  
+[--разные ТП под таблицы, валы, логи]()  
+[--что с batch insert/update]()  
+[--используется ли секционирование – максимальный размер 32]()  
+[--ТБ, принцип скользящего окна (log – 12 месяцев, log_archive]()  
+[--проверка нагрузочным тестированием]()  
+### [--Оптимизируем запросов]()
+[--проверяем seqscan]()  
+[--статистику]()  
+[--autoexplain]()  
 ## 13. Обслуживание СУБД
-### [Регулярное обслуживание]()
-[прогноз роста БД и свободного места]()  
-[топ таблиц с динамикой роста (помним по 32 ТБ)]()  
-[блоат индексов/тостов/данных]()  
-[когда последний раз приходил автовакуум]()  
-[int4 capacity]()  
+### [--Регулярное обслуживание]()
+[--прогноз роста БД и свободного места]()  
+[--топ таблиц с динамикой роста (помним по 32 ТБ)]()  
+[--блоат индексов/тостов/данных]()  
+[--когда последний раз приходил автовакуум]()  
+[--int4 capacity]()  
   
 
