--- a/004 Оптимизация/Практика оптимизации/Обслуживание СУБД/Индексы.md
+++ b/004 Оптимизация/Практика оптимизации/Обслуживание СУБД/Индексы.md
@@ -1,3 +1,3 @@
 [HOT Inside](https://www.pgcon.org/2008/schedule/events/105.en.html)   
 A heap fill factor less than 100 may help 
-A significantly smaller heap fill factor (as low as 50) is useful for heavy updates where most of the updates are bulk updates.
+A significantly smaller heap fill factor (as low ***as 50***) is useful ***for heavy updates*** where most of the updates are bulk updates.
