--- a/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
@@ -4,14 +4,14 @@
        
 #### Вывод текста системной функции
        
-```
+```bash
 -- psql
 \set ECHO_HIDDEN on
 \dt employees
 \unset ECHO_HIDDEN
 ```
 #### Включение сбора статистики вввода-вывода
-```
+```sql
 ALTER SYSTEM SET track_io_timing=on;
 select pg_reload_conf();
 ```
@@ -21,17 +21,17 @@ select pg_reload_conf();
 <details><summary><h3>Макросы</h3></summary>
        
 #### Приведение к типу regclass
-```
+```sql
 select * from pg_attribute where attrelid = 'employees'::regclass
 где
 'employees'::regclass = (select oid from pg_regclass where relname = 'employees')
 ```
 #### Приведение к типу regtype
-```
+```sql
 select atttypeid::regtype from pg_attribute
 ```
 #### Список regtypes
-```
+```bash
 \dT reg*
 ```
 
@@ -40,19 +40,19 @@ select atttypeid::regtype from pg_attribute
 <details><summary><h3>Системная информация PGSQL</h3></summary>
        
 #### Путь до основного файла таблицы относительно PGDATA
-```
+```sql
 select pg_relation_filepath('table');
 -- составляющие пути
 select oid from pg_database;
 select relfilenode from pg_class where relname = 'table';
 ```
 #### Получить имя последовательности
-```
+```sql
 select pg_relation_filepath(pg_get_serial_sequence('t', 'id'))
 ```
 #### Получить объекты по имени файла
 Расширение oid2name
-```
+```bash
 /usr/lib/postgresql/13/bin/oid2name [-d dbname][-d dbname -s]
 -- имя файла по имени таблицы
 /usr/lib/postgresql/13/bin/oid2name -d dbname -t tablename
@@ -60,28 +60,44 @@ select pg_relation_filepath(pg_get_serial_sequence('t', 'id'))
 /usr/lib/postgresql/13/bin/oid2name -d dbname -f 16657
 ```
 #### Получить размер конкретных слоев
-```
+```sql
 select pg_relation_size('t', 'main') main,
        pg_relation_size('t', 'vm') vm,
        pg_relation_size('t', 'fsm') fsm
 ```
 #### Размер таблицы
-```
+```sql
 -- сюда можно подставить не только имя таблицы, но и имя конкретного индекса
 pg_table_size - таблица + toast
 pg_indexes_size - только индексы
 pg_total_relation_size - все вместе
 ```
+#### Размеры таблиц с количеством строк
+```sql
+SELECT 
+  pg_class.relname AS table_name,
+  pg_size_pretty(pg_total_relation_size(pg_class.oid)) AS size,
+  pg_total_relation_size(pg_class.oid) / (current_setting('block_size')::integer / 1024) AS num_blocks,
+  pg_stat_user_tables.n_live_tup AS num_rows
+FROM 
+  pg_stat_user_tables 
+JOIN 
+  pg_class ON pg_stat_user_tables.relid = pg_class.oid 
+WHERE 
+  pg_class.relnamespace = (SELECT oid FROM pg_namespace WHERE nspname='public')
+ORDER BY 
+  pg_total_relation_size(pg_class.oid) DESC;
+```
 #### Размер базы
 Сумма таблиц
-```
+```sql
 SELECT sum(pg_total_relation_size(oid))
 FROM pg_class
 WHERE NOT relisshared -- локальные объекты базы
 AND relkind = 'r';  -- обычные таблицы
 ```
 Функция размера базы
-```
+```sql
 SELECT pg_database_size('data_lowlevel');
 ```
 Размеры будут отличаться, т.к. вторая функция возвращает размер каталога файловой системы, а в этом каталоге находятся несколько служебных файлов.
@@ -90,7 +106,7 @@ SELECT pg_database_size('data_lowlevel');
 
 <details><summary><h3>PSQL</h3></summary>
        
-```
+```bash
 \d object_name -- общая информация по объекту
 \d+ object_name -- дополнительная информация по объекту (ex - select text for view)
 \d table_name -- список объектов таблицы. включая индексы
@@ -111,7 +127,7 @@ SELECT pg_database_size('data_lowlevel');
 
 <details><summary><h3>Тестирование</h3></summary>
        
-```
+```sql
 pgbench -i dbname -- начальная инициализация
 
 select pg_stat_reset(); -- сброс статистики
@@ -129,7 +145,7 @@ select * from pg_statio_all_indexes where relid = 'pgbench_accoubts'::regclass \
 <details><summary><h3>Оптимизация</h3></summary>
 
 Отключение параллельного плана
-```       
+```sql
 => SET max_parallel_workers_per_gather = 0;
 ```
        
