--- a/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
@@ -88,6 +88,37 @@ WHERE
 ORDER BY 
   pg_total_relation_size(pg_class.oid) DESC;
 ```
+#### Размеры таблиц с количеством строк 2
+Функция
+```sql
+create or replace function 
+count_rows(schema text, tablename text) returns integer
+as
+$body$
+declare
+  result integer;
+  query varchar;
+begin
+  query := 'SELECT count(1) FROM ' || schema || '.' || tablename;
+  execute query into result;
+  return result;
+end;
+$body$
+language plpgsql;
+```
+Использование
+```sql
+select 
+  table_schema,
+  table_name, 
+  count_rows(table_schema, table_name)
+from information_schema.tables
+where 
+  table_schema not in ('pg_catalog', 'information_schema') 
+  and table_type='BASE TABLE'
+order by 3 desc;
+```
+
 #### Размер базы
 Сумма таблиц
 ```sql
