--- a/001 Администрирование/008 Отказоустойчивость и кластеризация/PGPool-II/001 Описание.md
+++ b/001 Администрирование/008 Отказоустойчивость и кластеризация/PGPool-II/001 Описание.md
@@ -4,7 +4,8 @@
 [A Deep Dive into Pgpool-II for PostgreSQL Load Balancing](https://github.com/AV-ghub/PostgreSQL/blob/main/001%20%D0%90%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5/008%20%D0%9E%D1%82%D0%BA%D0%B0%D0%B7%D0%BE%D1%83%D1%81%D1%82%D0%BE%D0%B9%D1%87%D0%B8%D0%B2%D0%BE%D1%81%D1%82%D1%8C%20%D0%B8%20%D0%BA%D0%BB%D0%B0%D1%81%D1%82%D0%B5%D1%80%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F/999%20Resources/A%20Deep%20Dive%20into%20Pgpool-II%20for%20PostgreSQL%20Load%20Balancing.md)
 ## Установка
 [PostgreSQL Pgpool-II CentOS: Installation Guide](https://github.com/AV-ghub/PostgreSQL/blob/main/001%20%D0%90%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5/008%20%D0%9E%D1%82%D0%BA%D0%B0%D0%B7%D0%BE%D1%83%D1%81%D1%82%D0%BE%D0%B9%D1%87%D0%B8%D0%B2%D0%BE%D1%81%D1%82%D1%8C%20%D0%B8%20%D0%BA%D0%BB%D0%B0%D1%81%D1%82%D0%B5%D1%80%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F/999%20Resources/PostgreSQL%20Pgpool-II%20CentOS%3A%20Installation%20Guide.md)     
-[OTUS Pgpool-II](https://habr.com/ru/companies/otus/articles/798267/)
+[OTUS Pgpool-II](https://habr.com/ru/companies/otus/articles/798267/)   
+[Настройка pgpool-II + PostgreSQL + Streaming replication + Hot standby](https://github.com/AV-ghub/PostgreSQL/blob/main/001%20%D0%90%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5/008%20%D0%9E%D1%82%D0%BA%D0%B0%D0%B7%D0%BE%D1%83%D1%81%D1%82%D0%BE%D0%B9%D1%87%D0%B8%D0%B2%D0%BE%D1%81%D1%82%D1%8C%20%D0%B8%20%D0%BA%D0%BB%D0%B0%D1%81%D1%82%D0%B5%D1%80%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F/PGPool-II/Resources/%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B0%20pgpool-II%20%2B%20PostgreSQL%20%2B%20Streaming%20replication%20%2B%20Hot%20standby.md)
 ## Организация отказоустойчивого кластера
 [Отказоустойчивый кластер СУБД PostgreSQL с использованием pgpool-II](https://confluence.speechpro.com/pages/viewpage.action?pageId=268711455)
 ## Сравнение производительности PGPool-II vs pgBouncer
