Update 002 Полезные скрипты.md

--- a/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
@@ -1,9 +1,6 @@
 ## Скрипты администрирования
-
-<details><summary><h3>Настройки</h3></summary>
-       
+### Настройки
 #### Вывод текста системной функции
-       
 ```bash
 -- psql
 \set ECHO_HIDDEN on
@@ -15,11 +12,7 @@
 ALTER SYSTEM SET track_io_timing=on;
 select pg_reload_conf();
 ```
-
-</details>
-
-<details><summary><h3>Макросы</h3></summary>
-       
+### Макросы
 #### Приведение к типу regclass
 ```sql
 select * from pg_attribute where attrelid = 'employees'::regclass
@@ -34,11 +27,7 @@ select atttypeid::regtype from pg_attribute
 ```bash
 \dT reg*
 ```
-
-</details>
-       
-<details><summary><h3>Системная информация PGSQL</h3></summary>
-       
+### Системная информация PGSQL
 #### Путь до основного файла таблицы относительно PGDATA
 ```sql
 select pg_relation_filepath('table');
@@ -118,7 +107,6 @@ where
   and table_type='BASE TABLE'
 order by 3 desc;
 ```
-
 #### Размер базы
 Сумма таблиц
 ```sql
@@ -132,11 +120,7 @@ AND relkind = 'r';  -- обычные таблицы
 SELECT pg_database_size('data_lowlevel');
 ```
 Размеры будут отличаться, т.к. вторая функция возвращает размер каталога файловой системы, а в этом каталоге находятся несколько служебных файлов.
-
-</details>
-
-<details><summary><h3>PSQL</h3></summary>
-       
+### PSQL
 ```bash
 \d object_name -- общая информация по объекту
 \d+ object_name -- дополнительная информация по объекту (ex - select text for view)
@@ -153,11 +137,7 @@ SELECT pg_database_size('data_lowlevel');
 \dt employees
 \unset ECHO_HIDDEN
 ```
-
-</details>
-
-<details><summary><h3>Тестирование</h3></summary>
-       
+### Тестирование      
 ```sql
 pgbench -i dbname -- начальная инициализация
 
@@ -171,14 +151,40 @@ select * from pg_statio_all_tables where relid = 'pgbench_accoubts'::regclass \g
 select * from pg_stat_all_indexes where relid = 'pgbench_accoubts'::regclass \gx -- количество операций ввода-вывода
 select * from pg_statio_all_indexes where relid = 'pgbench_accoubts'::regclass \gx -- в страницах
 ```
-
-</details>
-<details><summary><h3>Оптимизация</h3></summary>
-
-### Отключение параллельного плана
+### Оптимизация
+#### Отключение параллельного плана
 ```sql
 => SET max_parallel_workers_per_gather = 0;
 ```
-       
-</details>
-
+#### Поиск FK без индексов
+```sql
+SELECT c.conrelid::regclass AS "table",
+       /* list of key column names in order */
+       string_agg(a.attname, ',' ORDER BY x.n) AS columns,
+       pg_catalog.pg_size_pretty(
+          pg_catalog.pg_relation_size(c.conrelid)
+       ) AS size,
+       c.conname AS constraint,
+       c.confrelid::regclass AS referenced_table
+FROM pg_catalog.pg_constraint c
+   /* enumerated key column numbers per foreign key */
+   CROSS JOIN LATERAL
+      unnest(c.conkey) WITH ORDINALITY AS x(attnum, n)
+   /* name for each key column */
+   JOIN pg_catalog.pg_attribute a
+      ON a.attnum = x.attnum
+         AND a.attrelid = c.conrelid
+WHERE NOT EXISTS
+        /* is there a matching index for the constraint? */
+        (SELECT 1 FROM pg_catalog.pg_index i
+         WHERE i.indrelid = c.conrelid
+           /* it must not be a partial index */
+           AND i.indpred IS NULL
+           /* the first index columns must be the same as the
+              key columns, but order doesn't matter */
+           AND (i.indkey::smallint[])[0:cardinality(c.conkey)-1]
+               OPERATOR(pg_catalog.@>) c.conkey)
+  AND c.contype = 'f'
+GROUP BY c.conrelid, c.conname, c.confrelid
+ORDER BY pg_catalog.pg_relation_size(c.conrelid) DESC;
+```
