--- a/001 Администрирование/002 Структура данных/004 Индексы.md
+++ b/001 Администрирование/002 Структура данных/004 Индексы.md
@@ -1,2 +1,26 @@
 ## Особенности использования индексов
 [Foreign Key Indexing and Performance in PostgreSQL](https://www.cybertec-postgresql.com/en/index-your-foreign-key/)
+
+PostgreSQL **requires no index at the source** of a foreign key.   
+
+However, such an index is quite useful for finding all source rows that reference a target row.    
+The typical cases where you need that are:
+
+1. You perform a join between the two tables where you explicitly search for the source rows referencing one or a few target rows. If there is an index on the columns at the source, PostgreSQL can use an efficient ***nested loop join***.
+
+This is well known and pretty obvious.
+
+2. You delete rows or update key columns in the target table.
+
+Then PostgreSQL has to check if the foreign key constraint is still satisfied. It does so by searching if there are rows in the source table that would become orphaned by the data modification. ***Without an index, this requires a sequential scan*** of the source table.
+
+```sql
+-- to make the plans look simpler
+SET max_parallel_workers_per_gather = 0;
+-- to speed up CREATE INDEX
+SET maintenance_work_mem = '512MB';
+```
+
+[Поиск FK без индексов](https://github.com/AV-ghub/PostgreSQL/blob/main/001%20%D0%90%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5/010%20%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8%20%D0%B0%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F/002%20%D0%9F%D0%BE%D0%BB%D0%B5%D0%B7%D0%BD%D1%8B%D0%B5%20%D1%81%D0%BA%D1%80%D0%B8%D0%BF%D1%82%D1%8B.md#%D0%BF%D0%BE%D0%B8%D1%81%D0%BA-fk-%D0%B1%D0%B5%D0%B7-%D0%B8%D0%BD%D0%B4%D0%B5%D0%BA%D1%81%D0%BE%D0%B2)
+
+
