Update 002 Полезные скрипты.md

--- a/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
@@ -156,7 +156,7 @@ select * from pg_statio_all_indexes where relid = 'pgbench_accoubts'::regclass \
 ```sql
 => SET max_parallel_workers_per_gather = 0;
 ```
-#### Поиск FK без индексов
+#### [Поиск FK без индексов](https://www.cybertec-postgresql.com/en/get-rid-of-your-unused-indexes/)
 ```sql
 SELECT c.conrelid::regclass AS "table",
        /* list of key column names in order */
@@ -187,4 +187,24 @@ WHERE NOT EXISTS
   AND c.contype = 'f'
 GROUP BY c.conrelid, c.conname, c.confrelid
 ORDER BY pg_catalog.pg_relation_size(c.conrelid) DESC;
+```
+#### [Неиспользуемые индексы](https://www.cybertec-postgresql.com/en/get-rid-of-your-unused-indexes/)
+```sql
+PgSQL
+SELECT s.schemaname,
+       s.relname AS tablename,
+       s.indexrelname AS indexname,
+       pg_relation_size(s.indexrelid) AS index_size
+FROM pg_catalog.pg_stat_user_indexes s
+   JOIN pg_catalog.pg_index i ON s.indexrelid = i.indexrelid
+WHERE s.idx_scan = 0      -- has never been scanned
+  AND 0 <>ALL (i.indkey)  -- no index column is an expression
+  AND NOT i.indisunique   -- is not a UNIQUE index
+  AND NOT EXISTS          -- does not enforce a constraint
+         (SELECT 1 FROM pg_catalog.pg_constraint c
+          WHERE c.conindid = s.indexrelid)
+  AND NOT EXISTS          -- is not an index partition
+         (SELECT 1 FROM pg_catalog.pg_inherits AS inh
+          WHERE inh.inhrelid = s.indexrelid)
+ORDER BY pg_relation_size(s.indexrelid) DESC;
 ```
