Update 002 Полезные скрипты.md

--- a/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
@@ -189,6 +189,8 @@ GROUP BY c.conrelid, c.conname, c.confrelid
 ORDER BY pg_catalog.pg_relation_size(c.conrelid) DESC;
 ```
 #### [Неиспользуемые индексы](https://www.cybertec-postgresql.com/en/get-rid-of-your-unused-indexes/)
+> You can replace s.idx_scan = 0 in the query with a different condition, e.g. s.idx_scan < 10.
+> Indexes that are very rarely used are also good candidates for removal.
 ```sql
 SELECT s.schemaname,
        s.relname AS tablename,
