--- a/001 Администрирование/002 Структура данных/004 Индексы.md
+++ b/001 Администрирование/002 Структура данных/004 Индексы.md
@@ -1,5 +1,5 @@
 ## Особенности использования индексов
-[Foreign Key Indexing and Performance in PostgreSQL](https://www.cybertec-postgresql.com/en/index-your-foreign-key/)
+### [Foreign Key Indexing and Performance in PostgreSQL](https://www.cybertec-postgresql.com/en/index-your-foreign-key/)
 
 PostgreSQL **requires no index at the source** of a foreign key.   
 
@@ -22,5 +22,6 @@ SET maintenance_work_mem = '512MB';
 ```
 
 [Поиск FK без индексов](https://github.com/AV-ghub/PostgreSQL/blob/main/001%20%D0%90%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5/010%20%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8%20%D0%B0%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F/002%20%D0%9F%D0%BE%D0%BB%D0%B5%D0%B7%D0%BD%D1%8B%D0%B5%20%D1%81%D0%BA%D1%80%D0%B8%D0%BF%D1%82%D1%8B.md#%D0%BF%D0%BE%D0%B8%D1%81%D0%BA-fk-%D0%B1%D0%B5%D0%B7-%D0%B8%D0%BD%D0%B4%D0%B5%D0%BA%D1%81%D0%BE%D0%B2)
+### [Get rid of your unused indexes](https://www.cybertec-postgresql.com/en/get-rid-of-your-unused-indexes/)
 
 [Неиспользуемые индексы](https://github.com/AV-ghub/PostgreSQL/blob/main/001%20%D0%90%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5/010%20%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8%20%D0%B0%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F/002%20%D0%9F%D0%BE%D0%BB%D0%B5%D0%B7%D0%BD%D1%8B%D0%B5%20%D1%81%D0%BA%D1%80%D0%B8%D0%BF%D1%82%D1%8B.md#%D0%BD%D0%B5%D0%B8%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D1%83%D0%B5%D0%BC%D1%8B%D0%B5-%D0%B8%D0%BD%D0%B4%D0%B5%D0%BA%D1%81%D1%8B)
