--- a/001 Администрирование/008 Отказоустойчивость и кластеризация/Odyssey/001 Описание.md
+++ b/001 Администрирование/008 Отказоустойчивость и кластеризация/Odyssey/001 Описание.md
@@ -3,3 +3,6 @@
 
 ## Дистрибутив
 [odyssey](https://github.com/yandex/odyssey)
+
+## Развертывание
+[Сборка, установка и настройка пулера соединений Yandex Odyssey]()
