--- a/001 Администрирование/008 Отказоустойчивость и кластеризация/001 Описание.md
+++ b/001 Администрирование/008 Отказоустойчивость и кластеризация/001 Описание.md
@@ -1,1 +1,3 @@
-
+## Общие замечания
+При применении пулконнекторов или без, рекомендуется использовать паттерн circuit breaker
+[circuit breaker](https://github.com/AV-ghub/PostgreSQL/blob/main/001%20%D0%90%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5/008%20%D0%9E%D1%82%D0%BA%D0%B0%D0%B7%D0%BE%D1%83%D1%81%D1%82%D0%BE%D0%B9%D1%87%D0%B8%D0%B2%D0%BE%D1%81%D1%82%D1%8C%20%D0%B8%20%D0%BA%D0%BB%D0%B0%D1%81%D1%82%D0%B5%D1%80%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F/999%20Resources/Circuit%20Breaker%20Pattern%20in%20Java%3A%20Enhancing%20System%20Resilience.md)
