--- a/004 Оптимизация/Практика оптимизации/Resources/Пулеры.md
+++ b/004 Оптимизация/Практика оптимизации/Resources/Пулеры.md
@@ -1,1 +1,10 @@
+## Обзор
+[Обзор](https://github.com/AV-ghub/PostgreSQL/tree/main/001%20%D0%90%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5/008%20%D0%9E%D1%82%D0%BA%D0%B0%D0%B7%D0%BE%D1%83%D1%81%D1%82%D0%BE%D0%B9%D1%87%D0%B8%D0%B2%D0%BE%D1%81%D1%82%D1%8C%20%D0%B8%20%D0%BA%D0%BB%D0%B0%D1%81%D1%82%D0%B5%D1%80%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F)
 
+Организалция пула соединений может дать результат даже на не очень высоконагруженных в плане количества соединений решениях.
+
+Большинство соединений как правило простаивает, потребляя ресурсы, занимая выделенный кэш. Нормальный размер пула для активных соединений до 30. Большее количество говорит о проблемах внутри базы, когда она не справляется с нагрузкой. В то время, как общее количество пользователей может быть 1к и больше. В этом случае ***транзакционная модель*** соединения сильно спасает положение, и позволяет пользоваться подготовленным кэшем.
+
+Кроме того, в некоторых вариантах мы можем получить инструмент для администрирования пула.
+
+У каждого пулера есть свои особенности и недостатки. Но мы можем использовать и каскады пулеров, используя все преимущества комбинации разных пулеров.
