--- a/004 Оптимизация/Практика оптимизации/Мониторинг, профилирование и логирование/Resources/Примеры нагрузочного тестирования.md
+++ b/004 Оптимизация/Практика оптимизации/Мониторинг, профилирование и логирование/Resources/Примеры нагрузочного тестирования.md
@@ -1,19 +1,28 @@
+##### BaseLine
 ```bash
 sudo su postgres
 ```
-##### BaseLine
 ```bash
 pgbench postgres
 ```
-##### Запуск 10 сеансов по 10 сек каждый с выводом ежесекундного отчета
+
+<details><summary><h5>Запуск 10 сеансов по 10 сек каждый с выводом ежесекундного отчета</h5></summary>
+
 ```bash
 pgbench -P 1 -c 10 -T 10 postgres
 ```
-##### Запуск 10 сеансов по 10 сек каждый с созданием 4 рабочих потоков, динамически распределяемых между клиентами, с выводом ежесекундного отчета
+</details>
+
+<details><summary><h5>Запуск 10 сеансов по 10 сек каждый с созданием 4 рабочих потоков, динамически распределяемых между клиентами, с выводом ежесекундного отчета</h5></summary>
+
 ```bash
 pgbench -P 1 -c 10 -j 4 -T 10 postgres
 ```
-##### Тестирование на базе скрипта
+
+</details>
+
+<details><summary><h5>Тестирование на базе скрипта</h5></summary>
+
 Создаем базу и генерим данные
 ```sql
 psql
@@ -70,3 +79,7 @@ latency average = 14.596 ms
 initial connection time = 87.103 ms
 ```
 Совсем другое дело
+
+</details>
+  
+
