--- a/004 Оптимизация/Практика оптимизации/Мониторинг, профилирование и логирование/Resources/Примеры нагрузочного тестирования.md
+++ b/004 Оптимизация/Практика оптимизации/Мониторинг, профилирование и логирование/Resources/Примеры нагрузочного тестирования.md
@@ -6,14 +6,14 @@ sudo su postgres
 pgbench postgres
 ```
 
-<details><summary><h5>10 сеансов по 10 сек с выводом ежесекундного отчета</h5></summary>
+<details><summary><h5>10 сеансов по 10 сек с ежесекундным выводом</h5></summary>
 
 ```bash
 pgbench -P 1 -c 10 -T 10 postgres
 ```
 </details>
 
-<details><summary><h5>10 сеансов по 10 сек 4 рабочих потока с выводом ежесекундного отчета</h5></summary>
+<details><summary><h5>10 сеансов по 10 сек 4 рабочих потока с ежесекундным выводом</h5></summary>
 
 ```bash
 pgbench -P 1 -c 10 -j 4 -T 10 postgres
