Update Примеры нагрузочного тестирования.md

--- a/004 Оптимизация/Практика оптимизации/Мониторинг, профилирование и логирование/Resources/Примеры нагрузочного тестирования.md
+++ b/004 Оптимизация/Практика оптимизации/Мониторинг, профилирование и логирование/Resources/Примеры нагрузочного тестирования.md
@@ -81,5 +81,36 @@ initial connection time = 87.103 ms
 Совсем другое дело
 
 </details>
+
+<details><summary><h5>Примеры нагрузочных скриптов (workload.sql, workload2.sql) </h5></summary>
+
+```sql
+cat > ~/workload.sql << EOL
+\set r random(1, 5000000)
+SELECT id, fkRide, fio, contact, fkSeat FROM book.tickets
+WHERE id = :r;
+EOL
+```
+```sql
+cat > ~/workload2.sql << EOL
+INSERT INTO book.tickets (fkRide, fio, contact, fkSeat)
+VALUES (
+ceil(random()*100)
+, (array(SELECT fam FROM
+book.fam))[ceil(random()*110)]::text || ' ' ||
+(array(SELECT nam FROM
+book.nam))[ceil(random()*110)]::text
+,('{"phone":"+7' || (1000000000::bigint +
+floor(random()*9000000000)::bigint)::text || '"}')::jsonb
+, ceil(random()*100));
+EOL
+```
+
+</details>
+
+
+
+
+
   
 
