Update Примеры нагрузочного тестирования.md

--- a/004 Оптимизация/Практика оптимизации/Мониторинг, профилирование и логирование/Resources/Примеры нагрузочного тестирования.md
+++ b/004 Оптимизация/Практика оптимизации/Мониторинг, профилирование и логирование/Resources/Примеры нагрузочного тестирования.md
@@ -82,7 +82,7 @@ initial connection time = 87.103 ms
 
 </details>
 
-<details><summary><h5>Примеры нагрузочных скриптов (workload.sql, workload2.sql) </h5></summary>
+<details><summary><h5>Примеры нагрузочных скриптов (workload.sql, workload2.sql) для базы thai</h5></summary>
 
 ```sql
 cat > ~/workload.sql << EOL
