Update Примеры нагрузочного тестирования.md

--- a/004 Оптимизация/Практика оптимизации/Мониторинг, профилирование и логирование/Resources/Примеры нагрузочного тестирования.md
+++ b/004 Оптимизация/Практика оптимизации/Мониторинг, профилирование и логирование/Resources/Примеры нагрузочного тестирования.md
@@ -82,7 +82,9 @@ initial connection time = 87.103 ms
 
 </details>
 
-<details><summary><h5>Примеры нагрузочных скриптов (workload.sql, workload2.sql) для базы thai</h5></summary>
+<details><summary><h5>База Thai</h5></summary>
+
+### Примеры нагрузочных скриптов (workload.sql, workload2.sql)
 
 ```sql
 cat > ~/workload.sql << EOL
@@ -95,18 +97,30 @@ EOL
 cat > ~/workload2.sql << EOL
 INSERT INTO book.tickets (fkRide, fio, contact, fkSeat)
 VALUES (
-ceil(random()*100)
-, (array(SELECT fam FROM
-book.fam))[ceil(random()*110)]::text || ' ' ||
-(array(SELECT nam FROM
-book.nam))[ceil(random()*110)]::text
-,('{"phone":"+7' || (1000000000::bigint +
-floor(random()*9000000000)::bigint)::text || '"}')::jsonb
-, ceil(random()*100));
+  ceil(random() * 100),
+  (array(SELECT fam FROM book.fam))[ceil(random() * 110)]::text || ' ' ||
+  (array(SELECT nam FROM book.nam))[ceil(random() * 110)]::text,
+  ('{"phone":"+7' || (1000000000::bigint + floor(random() * 9000000000)::bigint)::text || '"}')::jsonb,
+  ceil(random()*100)
+);
 EOL
 ```
 
+### Профиль чтения для базы
+  
+```sql
+pgbench -c 8 -j 4 -T 10 -f ~/workload.sql -U postgres -p 5432 -h 127.0.0.1 thai
+```
+
+### Профиль записи для базы thai
+  
+```sql
+pgbench -c 8 -j 4 -T 10 -f ~/workload2.sql -U postgres -p 5432 -h 127.0.0.1 thai
+```
+
 </details>
+
+
 
 
 
