Update 002 Табличные пространства.md

--- a/001 Администрирование/002 Структура данных/002 Табличные пространства.md
+++ b/001 Администрирование/002 Структура данных/002 Табличные пространства.md
@@ -3,6 +3,13 @@
 
 ## Табличные пространства
 
+Табличное пространство (ТП):
+* отдельный каталог с точки зрения файловой системы
+* с отдельной файловой системой
+* ***в одном табличном пространстве*** позволяется размещать ***несколько баз данных***
+* каждой базе данных можно назначить как табличное пространство по умолчанию, так и в каждом конкретном случае указывать, в каком табличном пространстве будет расположен конкретный объект (таблица, индекс, статистика и так далее) внутри базы данных
+* ***один объект должен быть расположен только в 1 ТП***, но есть секционированные таблицы, для которых как раз можно использовать разные ТП
+
 <details><summary><h3>Общее</h3></summary>
   
 Табличные пространства - способ физической организации данных. Каталог, находящейся где-либо на файловой системе.
