--- a/004 Оптимизация/Практика оптимизации/Настройка файловой системы/Общие рекомендации.md
+++ b/004 Оптимизация/Практика оптимизации/Настройка файловой системы/Общие рекомендации.md
@@ -1,5 +1,9 @@
-### Варианты оптимизации производительности
-* распараллелить нагрузку на разные таблицы по разным системам хранения
-* локальный SSD без рейда для материальных представлений
-* монтирование в дисковую подсистему
-* при большом количестве файлов необходимо тюнить параметры файловой системы и PostgreSQL по максимально допустимому одновременному ***количеству открытых файлов***
+### Оптимизация производительности на ФС
+* распараллелить нагрузку на разные таблицы ***по разным системам хранения***
+* локальный ***SSD*** без рейда для материальных представлений
+* при большом количестве файлов тюнить параметры файловой системы и PostgreSQL по максимально допустимому одновременному ***количеству открытых файлов***
+
+### Версия строки должна помещаться на одну страницу 8 КБ 
+* сжать часть атрибутов,
+* вынести в отдельную TOAST-таблицу
+
