--- a/004 Оптимизация/Практика оптимизации/Настройка файловой системы/Общие рекомендации.md
+++ b/004 Оптимизация/Практика оптимизации/Настройка файловой системы/Общие рекомендации.md
@@ -4,6 +4,6 @@
 * при большом количестве файлов тюнить параметры файловой системы и PostgreSQL по максимально допустимому одновременному ***количеству открытых файлов***
 
 ### Версия строки должна помещаться на одну страницу 8 КБ 
-* сжать часть атрибутов,
-* вынести в отдельную TOAST-таблицу
+* ***сжать*** часть атрибутов,
+* вынести в ***отдельную TOAST-таблицу***
 
